--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -9,7 +9,7 @@
     margin-bottom: 5px !important;
 }
 
-.chatHistory, .eventList {
+.eventHistory, .eventList {
   overflow-y: scroll;
   height: 200px;
 }
