import from the end of cruise AT40-01

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -17,3 +17,12 @@
 .footer {
   text-align: right;
 }
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-brand>img {
+  padding: 7px 14px;
+}
